2013-12-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: Fix if header have only one
	  application property.

2013-12-12  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Fix read from applicaiton stderr.

2013-12-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/disk_history.c: Fix storage setting.

2013-12-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driverio.c(update_info_taper): Log a message if label is
	  not set.

2013-12-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amflush.pl: Fix parsing of letter argument.

2013-11-27  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Always use the prefix when accessing the
	  bucket.
	* device-src/s3.c (s3_is_bucket_exists): Add prefix as argument.
	* device-src/s3.h (s3_is_bucket_exists): Change prototype.

2013-11-21  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm, perl/Amanda/Changer,
	  perl/Amanda/JSON/Changer.pm: s/look to be/looks to be/.

2013-11-21  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amindexd.c: Fix bug found by coverity.

2013-11-21  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Speedup by checking all devices.

2013-11-20  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Add message 1100025
	* perl/Amanda/Changer/robot.pm (verify): Report drive error.
	* server-src/amtape.pl: Handle message 1100025.

2013-11-20  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Add message 1100024
	* perl/Amanda/Changer/robot.pm (verify): Report non-existant drive.
	* server-src/amtape.pl: Handle message 1100024.

2013-11-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: Allow multiple values for the one
	  property.

2013-11-18 Dan Locks <dwlocks@zmanda.com>
	* example/Makefile.am: update xml file names
	* example/amandaclient-tcp.xml.in: rename this