@@ -127,9 +127,6 @@ int merge_dles_properties(dle_t *dles, int verbose);
 
 char *fixup_relative(char *name, char *device);
 backup_support_option_t *backup_support_option(char *program,
-					       g_option_t *g_options,
-					       char *disk,
-					       char *amdevice,
 					       GPtrArray **errarray);
 
 void run_client_script(script_t     *script,
